2003-03-04  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-location-bar.c (nautilus_location_bar_init):
	Use EelInputEventBox for the location label.
	This makes theming nicer.

2003-03-04  Alexander Larsson  <alexl@redhat.com>

	* src/file-manager/fm-desktop-icon-view.c (fm_desktop_icon_view_init):
	Don't connect empty void-returning handler to "event". Fixes
	delete-key on desktop, and probably other random keynav-on-desktop
	failures.

2003-03-04  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-property-browser.c (make_properties_from_directories) 
	(make_drag_image): Add back erase emblem to backgrounds & emblems dialog.

2003-03-04  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c:
	* nautilus-zoom-control.c:
	Don't chain up to initialize if it is null.
	
2003-03-04  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (nautilus_icon_container_accessible_get_type):
	EEL_CANVAS, not GNOME_CANVAS.

	* libnautilus-private/nautilus-icon-canvas-item.c (nautilus_icon_canvas_item_accessible_get_type):
	Implements AtkText for icons presenting the text on both lines.
	Implements atk_text_get_offset_at_point and atk_text_get_character_extents
	so that screen readers can obtain the text.

	* src/nautilus-zoom-control.c (nautilus_zoom_control_accessible_initialize):
	Set the role for the zoom widget.
	
	All patches by padraig.obriain@sun.com

2003-03-03  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-dnd.c (confirm_switch_to_manual_layout):
	Disable switch-to-manual layout dialog.

2003-03-03  Alexander Larsson  <alexl@redhat.com>
	
	* libnautilus-private/nautilus-icon-container.c:
	(icon_toggle_selected), (button_press_event),
	(nautilus_icon_container_did_not_drag), (handle_icon_button_press):
	* libnautilus-private/nautilus-icon-private.h:
	Ctrl/shift dragging doesn't deselect the icon you click on.
	Double-clicking has to be twice on the same icon.
