@@ -1,3 +1,9 @@
+2003-03-05  Alexander Larsson  <alexl@redhat.com>
+
+	* src/nautilus-zoom-control.[ch]:
+	Derive from EelInputEventBox instead of GtkEventBox.
+	Works better with themes.
+
 2003-03-04  Alexander Larsson  <alexl@redhat.com>
 
 	* src/nautilus-location-bar.c (nautilus_location_bar_init):
